--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -109,7 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "brown_catalogue = Table.read(\"{}/master_catalogue_bootes_brown_20180509.fits\".format(OUT_DIR))\n",
+    "help_catalogue = Table.read(\"{}/master_catalogue_bootes_help_20180501.fits\".format(OUT_DIR))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -118,14 +130,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "brown_catalogue = Table.read(\"{}/master_catalogue_bootes_brown_20180509.fits\".format(OUT_DIR))\n",
-    "help_catalogue = Table.read(\"{}/master_catalogue_bootes_help_20180501.fits\".format(OUT_DIR))\n",
-    "\n",
-    "\n",
-    "cross_id = Table.read(\"{}/master_list_cross_ident_bootes_brown_20180509.fits\".format(OUT_DIR))['full_help_id', 'help_id']\n",
+    "cross_id_name = \"master_list_cross_ident_bootes_brown_20180509.fits\"\n",
+    "cross_id = Table.read(\"{}/{}\".format(OUT_DIR,cross_id_name))['full_help_id', 'help_id']\n",
     "cross_id['help_id'].name = 'brown_help_id'\n",
     "cross_id['full_help_id'].name = 'help_help_id'\n",
-    "\n"
+    "\n",
+    "help_cross_id_name = \"master_list_cross_ident_bootes_help_20180501.fits\""
    ]
   },
   {
@@ -204,7 +214,9 @@
     "editable": true
    },
    "source": [
-    "## 3  - crop to HELP area"
+    "## 3  - Crop to HELP area\n",
+    "\n",
+    "The Bootes Brown catalogue slightly goes outside the HELP Bootes field."
    ]
   },
   {
@@ -261,6 +273,138 @@
    "source": [
     "master_catalogue = master_catalogue.filled()\n",
     "master_catalogue.write(\"{}/master_catalogue_bootes{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5 - Make final cross ID catalogue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "brown_cross_id = Table.read(\"{}/{}\".format(OUT_DIR,cross_id_name))#['full_help_id', 'help_id']\n",
+    "brown_cross_id['help_id'].name = 'brown_help_id'\n",
+    "brown_cross_id['full_help_id'].name = 'help_help_id'\n",
+    "brown_cross_id.add_column(Column(data=brown_cross_id['help_help_id'], name = 'help_id'))\n",
+    "\n",
+    "help_cross_id = Table.read(\"{}/{}\".format(OUT_DIR,help_cross_id_name))\n",
+    "help_cross_id.remove_columns(['specz_id', 'sdss_id'])\n",
+    "help_cross_id['help_id'].name = 'help_help_id'\n",
+    "\n",
+    "final_cross_id = join(brown_cross_id, help_cross_id, join_type='left')\n",
+    "\n",
+    "for col in final_cross_id.colnames:\n",
+    "    final_cross_id[col].fill_value = -1\n",
+    "final_cross_id = final_cross_id.filled()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<i>Table length=10</i>\n",
+       "<table id=\"table4758335328-267483\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>idx</th><th>brown_i_id</th><th>brown_irac_id</th><th>help_help_id</th><th>brown_help_id</th><th>specz_id</th><th>sdss_id</th><th>help_id</th><th>ps1_id</th><th>legacy_id</th><th>ibis_id</th><th>ndwfs_id</th><th>uhs_id</th><th>zbootes_id</th><th>datafusion_intid</th></tr></thead>\n",
+       "<tr><td>0</td><td>394263</td><td>-1</td><td>-1</td><td>HELP_J142500.285+331035.838</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>1</td><td>473154</td><td>-1</td><td>-1</td><td>HELP_J143318.051+332158.118</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>2</td><td>2019839</td><td>-1</td><td>-1</td><td>HELP_J142939.235+354635.105</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>3</td><td>445407</td><td>-1</td><td>-1</td><td>HELP_J142446.142+331756.854</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>4</td><td>2027735</td><td>-1</td><td>-1</td><td>HELP_J142639.609+354724.470</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>5</td><td>161462</td><td>-1</td><td>-1</td><td>HELP_J142446.456+324136.432</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>6</td><td>2005436</td><td>-1</td><td>-1</td><td>HELP_J142440.580+354503.991</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>7</td><td>242716</td><td>-1</td><td>-1</td><td>HELP_J142742.433+325234.332</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>8</td><td>1446199</td><td>-1</td><td>-1</td><td>HELP_J142510.784+344929.132</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>9</td><td>2006597</td><td>-1</td><td>-1</td><td>HELP_J143221.937+354511.185</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
+       ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
+       "display: inline-block; margin-right: 1em; }\n",
+       ".paginate_button { margin-right: 5px; }\n",
+       "</style>\n",
+       "<script>\n",
+       "\n",
+       "var astropy_sort_num = function(a, b) {\n",
+       "    var a_num = parseFloat(a);\n",
+       "    var b_num = parseFloat(b);\n",
+       "\n",
+       "    if (isNaN(a_num) && isNaN(b_num))\n",
+       "        return ((a < b) ? -1 : ((a > b) ? 1 : 0));\n",
+       "    else if (!isNaN(a_num) && !isNaN(b_num))\n",
+       "        return ((a_num < b_num) ? -1 : ((a_num > b_num) ? 1 : 0));\n",
+       "    else\n",
+       "        return isNaN(a_num) ? -1 : 1;\n",
+       "}\n",
+       "\n",
+       "require.config({paths: {\n",
+       "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
+       "}});\n",
+       "require([\"datatables\"], function(){\n",
+       "    console.log(\"$('#table4758335328-267483').dataTable()\");\n",
+       "    \n",
+       "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
+       "    \"optionalnum-asc\": astropy_sort_num,\n",
+       "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
+       "});\n",
+       "\n",
+       "    $('#table4758335328-267483').dataTable({\n",
+       "        order: [],\n",
+       "        pageLength: 50,\n",
+       "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
+       "        pagingType: \"full_numbers\",\n",
+       "        columnDefs: [{targets: [0, 1, 2, 6, 8, 9, 12, 14], type: \"optionalnum\"}]\n",
+       "    });\n",
+       "});\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_cross_id[:10].show_in_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "final_cross_id.write(\"master_list_cross_ident_bootes{}\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
