--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -115,8 +115,23 @@
    },
    "outputs": [],
    "source": [
-    "brown_catalogue = Table.read(\"{}/master_catalogue_bootes_brown_20180509.fits\".format(OUT_DIR))\n",
-    "help_catalogue = Table.read(\"{}/master_catalogue_bootes_help_20180501.fits\".format(OUT_DIR))"
+    "brown_catalogue_name =\"master_catalogue_bootes_brown_20180517.fits\"\n",
+    "help_catalogue_name =\"master_catalogue_bootes_help_20180501.fits\"\n",
+    "\n",
+    "brown_cross_id_name = \"master_list_cross_ident_bootes_brown_20180509.fits\"\n",
+    "help_cross_id_name = \"master_list_cross_ident_bootes_help_20180501.fits\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "brown_catalogue = Table.read(\"{}/{}\".format(OUT_DIR, brown_catalogue_name))\n",
+    "help_catalogue = Table.read(\"{}/{}\".format(OUT_DIR, help_catalogue_name))"
    ]
   },
   {
@@ -129,13 +144,9 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "cross_id_name = \"master_list_cross_ident_bootes_brown_20180509.fits\"\n",
-    "cross_id = Table.read(\"{}/{}\".format(OUT_DIR,cross_id_name))['full_help_id', 'help_id']\n",
-    "cross_id['help_id'].name = 'brown_help_id'\n",
-    "cross_id['full_help_id'].name = 'help_help_id'\n",
-    "\n",
-    "help_cross_id_name = \"master_list_cross_ident_bootes_help_20180501.fits\""
+    "brown_cross_id = Table.read(\"{}/{}\".format(OUT_DIR,brown_cross_id_name))['full_help_id', 'help_id']\n",
+    "brown_cross_id['help_id'].name = 'brown_help_id'\n",
+    "brown_cross_id['full_help_id'].name = 'help_help_id'"
    ]
   },
   {
@@ -180,7 +191,7 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = join(cross_id, brown_catalogue, join_type='left')\n",
+    "master_catalogue = join(brown_cross_id, brown_catalogue, join_type='left')\n",
     "master_catalogue = join(master_catalogue, help_catalogue, join_type='left')\n",
     "             \n",
     "\n"
@@ -290,7 +301,7 @@
    },
    "outputs": [],
    "source": [
-    "brown_cross_id = Table.read(\"{}/{}\".format(OUT_DIR,cross_id_name))#['full_help_id', 'help_id']\n",
+    "brown_cross_id = Table.read(\"{}/{}\".format(OUT_DIR,brown_cross_id_name))#['full_help_id', 'help_id']\n",
     "brown_cross_id['help_id'].name = 'brown_help_id'\n",
     "brown_cross_id['full_help_id'].name = 'help_help_id'\n",
     "brown_cross_id.add_column(Column(data=brown_cross_id['help_help_id'], name = 'help_id'))\n",
