Bootes nearly there

--- a/dmu1/dmu1_ml_Bootes/2.1_Brown_Reformatting.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.1_Brown_Reformatting.ipynb
@@ -131,6 +131,10 @@
     "\n",
     "i_catalogue = Table.read(\"../../dmu0/dmu0_Bootes_Brown/data/Bootes_merged_Icorr_2014a_all_ap2_07112017.fits\") #[list(imported_columns)]\n",
     "irac_i2_catalogue = Table.read(\"../../dmu0/dmu0_Bootes_Brown/data/bootes_merged_ch2corr_2014a_all_ap2_07112017.fits\")\n",
+    "\n",
+    "help_catalogue_name = \"master_catalogue_bootes_help_20180501.fits\"\n",
+    "\n",
+    "\n",
     "#for column in imported_columns:\n",
     "#    catalogue[column].name = imported_columns[column]\n",
     "\n",
@@ -1111,7 +1115,7 @@
     "    })\n",
     "\n",
     "\n",
-    "help_catalogue = Table.read(\"./data/master_catalogue_bootes_20180501.fits\")[list(help_imported_columns)]\n",
+    "help_catalogue = Table.read(\"./data/{}\")[list(help_imported_columns,help_catalogue_name)]\n",
     "for column in help_imported_columns:\n",
     "    help_catalogue[column].name = help_imported_columns[column]\n",
     "\n",
