--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +118,7 @@
     "brown_catalogue_name =\"master_catalogue_bootes_brown_20180517.fits\"\n",
     "help_catalogue_name =\"master_catalogue_bootes_help_20180501.fits\"\n",
     "\n",
-    "brown_cross_id_name = \"master_list_cross_ident_bootes_brown_20180509.fits\"\n",
+    "brown_cross_id_name = \"master_list_cross_ident_bootes_brown_20180517.fits\"\n",
     "help_cross_id_name = \"master_list_cross_ident_bootes_help_20180501.fits\""
    ]
   },
@@ -295,16 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "brown_cross_id = Table.read(\"{}/{}\".format(OUT_DIR,brown_cross_id_name))#['full_help_id', 'help_id']\n",
+    "brown_cross_id = Table.read(\"{}/{}\".format(OUT_DIR,brown_cross_id_name))\n",
     "brown_cross_id['help_id'].name = 'brown_help_id'\n",
     "brown_cross_id['full_help_id'].name = 'help_help_id'\n",
-    "brown_cross_id.add_column(Column(data=brown_cross_id['help_help_id'], name = 'help_id'))\n",
+    "\n",
     "\n",
     "help_cross_id = Table.read(\"{}/{}\".format(OUT_DIR,help_cross_id_name))\n",
     "help_cross_id.remove_columns(['specz_id', 'sdss_id'])\n",
@@ -312,14 +312,93 @@
     "\n",
     "final_cross_id = join(brown_cross_id, help_cross_id, join_type='left')\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "for col in final_cross_id.colnames:\n",
     "    final_cross_id[col].fill_value = -1\n",
-    "final_cross_id = final_cross_id.filled()"
+    "final_cross_id = final_cross_id.filled()\n",
+    "\n",
+    "final_cross_id['specz_id'][final_cross_id['specz_id'] == ''] = '-1'\n",
+    "\n",
+    "final_cross_id.add_column(Column(data=final_cross_id['help_help_id'], name = 'help_id'))\n",
+    "have_brown_id = (final_cross_id['brown_help_id'] != '-1')\n",
+    "final_cross_id['help_id'][have_brown_id] = final_cross_id['brown_help_id'][have_brown_id]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['brown_i_id',\n",
+       " 'brown_irac_id',\n",
+       " 'help_help_id',\n",
+       " 'brown_help_id',\n",
+       " 'specz_id',\n",
+       " 'sdss_id',\n",
+       " 'ps1_id',\n",
+       " 'legacy_id',\n",
+       " 'ibis_id',\n",
+       " 'ndwfs_id',\n",
+       " 'uhs_id',\n",
+       " 'zbootes_id',\n",
+       " 'datafusion_intid',\n",
+       " 'help_id']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_cross_id.colnames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = ['help_id',\n",
+    "           'brown_help_id',\n",
+    "           'help_help_id',\n",
+    "           'brown_i_id',\n",
+    "           'brown_irac_id',\n",
+    "           'specz_id',\n",
+    "           'sdss_id',\n",
+    "           'ps1_id',\n",
+    "           'legacy_id',\n",
+    "           'ibis_id',\n",
+    "           'ndwfs_id',\n",
+    "           'uhs_id',\n",
+    "           'zbootes_id',\n",
+    "           'datafusion_intid']\n",
+    "print(set(columns) - set(final_cross_id.colnames))\n",
+    "final_cross_id = final_cross_id[columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -328,18 +407,18 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4758335328-267483\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>brown_i_id</th><th>brown_irac_id</th><th>help_help_id</th><th>brown_help_id</th><th>specz_id</th><th>sdss_id</th><th>help_id</th><th>ps1_id</th><th>legacy_id</th><th>ibis_id</th><th>ndwfs_id</th><th>uhs_id</th><th>zbootes_id</th><th>datafusion_intid</th></tr></thead>\n",
-       "<tr><td>0</td><td>394263</td><td>-1</td><td>-1</td><td>HELP_J142500.285+331035.838</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
-       "<tr><td>1</td><td>473154</td><td>-1</td><td>-1</td><td>HELP_J143318.051+332158.118</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
-       "<tr><td>2</td><td>2019839</td><td>-1</td><td>-1</td><td>HELP_J142939.235+354635.105</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
-       "<tr><td>3</td><td>445407</td><td>-1</td><td>-1</td><td>HELP_J142446.142+331756.854</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
-       "<tr><td>4</td><td>2027735</td><td>-1</td><td>-1</td><td>HELP_J142639.609+354724.470</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
-       "<tr><td>5</td><td>161462</td><td>-1</td><td>-1</td><td>HELP_J142446.456+324136.432</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
-       "<tr><td>6</td><td>2005436</td><td>-1</td><td>-1</td><td>HELP_J142440.580+354503.991</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
-       "<tr><td>7</td><td>242716</td><td>-1</td><td>-1</td><td>HELP_J142742.433+325234.332</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
-       "<tr><td>8</td><td>1446199</td><td>-1</td><td>-1</td><td>HELP_J142510.784+344929.132</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
-       "<tr><td>9</td><td>2006597</td><td>-1</td><td>-1</td><td>HELP_J143221.937+354511.185</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<table id=\"table4547609208-363162\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>idx</th><th>help_id</th><th>brown_help_id</th><th>help_help_id</th><th>brown_i_id</th><th>brown_irac_id</th><th>specz_id</th><th>sdss_id</th><th>ps1_id</th><th>legacy_id</th><th>ibis_id</th><th>ndwfs_id</th><th>uhs_id</th><th>zbootes_id</th><th>datafusion_intid</th></tr></thead>\n",
+       "<tr><td>0</td><td>HELP_J142500.285+331035.838</td><td>HELP_J142500.285+331035.838</td><td>-1</td><td>394263</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>1</td><td>HELP_J143318.051+332158.118</td><td>HELP_J143318.051+332158.118</td><td>-1</td><td>473154</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>2</td><td>HELP_J142939.235+354635.105</td><td>HELP_J142939.235+354635.105</td><td>-1</td><td>2019839</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>3</td><td>HELP_J142446.142+331756.854</td><td>HELP_J142446.142+331756.854</td><td>-1</td><td>445407</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>4</td><td>HELP_J142639.609+354724.470</td><td>HELP_J142639.609+354724.470</td><td>-1</td><td>2027735</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>5</td><td>HELP_J142446.456+324136.432</td><td>HELP_J142446.456+324136.432</td><td>-1</td><td>161462</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>6</td><td>HELP_J142440.580+354503.991</td><td>HELP_J142440.580+354503.991</td><td>-1</td><td>2005436</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>7</td><td>HELP_J142742.433+325234.332</td><td>HELP_J142742.433+325234.332</td><td>-1</td><td>242716</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>8</td><td>HELP_J142510.784+344929.132</td><td>HELP_J142510.784+344929.132</td><td>-1</td><td>1446199</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
+       "<tr><td>9</td><td>HELP_J143221.937+354511.185</td><td>HELP_J143221.937+354511.185</td><td>-1</td><td>2006597</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td><td>-1</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -363,19 +442,19 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table4758335328-267483').dataTable()\");\n",
+       "    console.log(\"$('#table4547609208-363162').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table4758335328-267483').dataTable({\n",
+       "    $('#table4547609208-363162').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
        "        pagingType: \"full_numbers\",\n",
-       "        columnDefs: [{targets: [0, 1, 2, 6, 8, 9, 12, 14], type: \"optionalnum\"}]\n",
+       "        columnDefs: [{targets: [0, 4, 5, 7, 8, 9, 12, 14], type: \"optionalnum\"}]\n",
        "    });\n",
        "});\n",
        "</script>\n"
@@ -384,7 +463,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
