--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -7,7 +7,7 @@
     "editable": true
    },
    "source": [
-    "# Bootes master catalogue\n",
+    "# Final Bootes master catalogue\n",
     "\n",
     "This notebook presents the combination of the HELP standard catalogue with the aperture matched photometry from Brown which gives superior photometric redhsifts."
    ]
@@ -178,7 +178,7 @@
     "editable": true
    },
    "source": [
-    "## 2 join the two catalogues taking brown if both are available"
+    "## 2 - Join the two catalogues taking brown if both are available"
    ]
   },
   {
@@ -208,8 +208,12 @@
    "outputs": [],
    "source": [
     "for col in in_both:\n",
-    "    has_brown = ((master_catalogue['brown_help_id'] != '-1')\n",
-    "                 & ~np.isnan(master_catalogue[\"brown_{}\".format(col)]))\n",
+    "    has_brown = (master_catalogue['brown_help_id'] != '-1')\n",
+    "                \n",
+    "    try:\n",
+    "        has_brown = has_brown  & ~np.isnan(master_catalogue[\"brown_{}\".format(col)])\n",
+    "    except TypeError:\n",
+    "        print(\"brown_{} is not a column of floats\".format(col))\n",
     "    master_catalogue[\"help_{}\".format(col)][has_brown] = master_catalogue[\"brown_{}\".format(col)][has_brown]\n",
     "    master_catalogue[\"help_{}\".format(col)].name = col\n",
     "    master_catalogue.remove_column(\"brown_{}\".format(col))\n",
